# research95

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: api_pilot.example.json  api_redesign_smoke.example.json  api_tool_augmented_full.example.json  evp7_g5_llm.example.json  evp8_deepseek_qwen.example.json  evp8_deepseek_qwen_accept_v0_2.example.json  evp8_e6_no_verdict_ablation.example.json  evp8_hard_e6_evidence_only.example.json  evp8_hard_qwen_deepseek.example.json  evp8_hard_tool_contestation.example.json  evp8_later_models.example.json  evp8_qwen_first_main_v0_3.example.json  evp8_realistic_agent_qwen.example.json  evp8_realistic_agent_qwen_no_verdict.example.json  experiment.example.json  model_selection.example.json  models.example.json  models.matched.example.json
docs/: INDEX.md
prompts/: evp8_tool_contestation_merge_gate_v0_1.md  evp8_visible_evidence_merge_gate_v0_1.md  evp8_visible_evidence_merge_gate_v0_2.md  prompt_change_log.md
scripts/: analyze_claim_labels.py  analyze_evp7_g5_statistics.py  analyze_evp7_qualitative_cases.py  analyze_evp7_schema_dry_run_metrics.py  analyze_evp7_tool_attribution.py  analyze_evp7_utility_sensitivity.py  analyze_evp8_e6_no_verdict_ablation.py  analyze_evp8_hard_e6_evidence_only_opportunity.py  analyze_evp8_hard_e6_evidence_only_statistics.py  analyze_evp8_hard_false_accept_cases.py  analyze_evp8_hard_tool_contestation_opportunity.py  analyze_evp8_hard_tool_contestation_policy.py  analyze_evp8_phase_a_paper_ready.py  analyze_evp8_qwen_first_label_conditioned.py  analyze_evp8_tool_headroom.py  (+169 more)
(+551 files in other folders)
